--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,7 +138,6 @@ dependencies {
     implementation 'com.github.Z-P-J:ZToolBar:1.0.0'
     implementation 'com.github.Z-P-J:StateManager:1.0.0'
     implementation 'com.github.Z-P-J:SmoothCheckBox:1.0.0'
-
-    implementation project(':bus')
+    implementation 'com.github.Z-P-J:ZBus:1.0.0'
 
 }
